wip schwarze hand

--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -130,7 +130,6 @@ Interne Referenzen
 	% Alrik Normalpaktierer\\
 	% Gatsu\\
 	% Thymian\\
-	% \href{https://github.com/XaverStiensmeier/IlarisGlossaryEntries}{Xaver Stiensmeier}\\
 }
 \credit{Illustrationen}{
 	\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}\\
@@ -210,7 +209,6 @@ farbe=rot
 %\includepdf[pages=-,addtotoc={1,section,1,Selindian der Würstchenspalter,nsc5}]{klamm_und_heimlich/charaktere/selindian_der_wuerstchenspalter.pdf}
 
 \kapitel{In\,den\,Hallen\,\allowbreak des\,Bergkönigs}
-
 \input{bergkoenig/in-den-hallen-des-bergkoenigs.tex}
 %TODO Charaktere ohne Formularfunktion exportieren und einbinden
 %\includepdf[pages=-,addtotoc={1,section,1,Dascha,sc1}]{bergkoenig/pdf/Dascha.pdf}
@@ -220,5 +218,7 @@ farbe=rot
 \ohnehintergrund
 
 
+\kapitel{Die\,schwarze\,Hand\,\allowbreak im\,wengenholmer\,Land}
+\input{schwarze_hand/abenteuer.tex}
 
 \end{document}
