--- a/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
+++ b/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
@@ -1,3 +1,6 @@
+
+\kapitel{In\,den\,Hallen\,\allowbreak des\,Bergkönigs}
+
 \platz
 \credit{Autor}{\emph{für den Ilaris-Abenteuer-Wettbewerb anonymisiert}
 }
@@ -876,6 +879,7 @@ Zu den Dingen, die sie sich hier einverleibt hat, gehört ausgerechnet das Szept
 
 \kreaturriesenamoebe
 
+
 Nach dem Kampf kann die Gruppe dieses bergen. Es besteht hauptsächlich aus \textbf{Asthenil}, mit Applikationen aus \textbf{Toschkril} und \textbf{Zwergengold}.
 Ein großer \textbf{Serpentin} ist an zentraler Stelle eingebettet.
 \\
@@ -1083,6 +1087,16 @@ Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welche
 
 \handout
 
+
+% CHARKTERE
+\neueseite
+\includepdf[pages=-,addtotoc={1,section,1,Dascha,sc1}]{bergkoenig/pdf/dascha.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Jasinthe,sc1}]{bergkoenig/pdf/jasinthe.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Odir Sensendengler,sc1}]{bergkoenig/pdf/odir_sensendengler.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Graboxa,sc1}]{bergkoenig/pdf/graboxa.pdf}
+
+\neueseite
+
 %Lösung: D G M
 \label{karten}
 \begin{center}
@@ -1239,3 +1253,7 @@ Ambosssymbole: Anvil Impact SVG Vector von game-icons.net unter der CC Attributi
 
 Hebel-Symbol von game-icons.net unter der CC Attribution License
 \normalsize
+
+
+\neueseite
+\mithintergrund
