--- a/band_02/klamm_und_heimlich/abenteuer.tex
+++ b/band_02/klamm_und_heimlich/abenteuer.tex
@@ -1,3 +1,5 @@
+
+\kapitel{Klamm und heimlich}
 \begin{center}
 
 \usekomafont{section}
@@ -22,8 +24,8 @@ Elisabeth Schmitt}
 
 \credit{Danksagung}{Danke an alle, die an einer der vier Testrunden teilgenommen haben!}
 
-\credit{Layout \& Dokumentgenerierung}
-{Matthias Thanos\\ \url{https://brauerei.ilaris-online.de}}
+%\credit{Layout \& Dokumentgenerierung}
+%{Matthias Thanos\\ \url{https://brauerei.ilaris-online.de}}
 
 \credit{Ilaris-Artwork}{\href{https://www.artstation.com/bernhard\_eisner}{Bernhard Eisner}}
 
@@ -464,3 +466,14 @@ in vier Tagen wird der weiche Wurm vom Markt zurückkehren. Er weiß alles, was 
 \label{kuh_ho2}
 
 \spaltenende
+
+% CHARAKTERE
+\neueseite
+\ohnehintergrund
+\includepdf[pages=-,addtotoc={1,section,1,Arion Nebelsucherin,nsc1}]{klamm_und_heimlich/charaktere/arion_nebelsucherin.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Donata Donnerschlag,nsc2}]{klamm_und_heimlich/charaktere/donata_donnerschlag.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Elidir Fenius Galahan,nsc3}]{klamm_und_heimlich/charaktere/elidir_fenius_galahan.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Karox Sohn des Kalgrix,nsc4}]{klamm_und_heimlich/charaktere/karox_sohn_des_kalgrix.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Selindian der Würstchenspalter,nsc5}]{klamm_und_heimlich/charaktere/selindian_der_wuerstchenspalter.pdf}
+\neueseite
+\mithintergrund
