--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -3,6 +3,7 @@
 \usepackage{verbatim}
 \usepackage{fourier}
 \usepackage{geometry}
+\input{kreaturen.tex}
 
 \setlist{nolistsep, align=parleft,left=5pt..1.5em}
 
@@ -44,7 +45,8 @@
 \newcommand{\vorlesen}[1]{\begin{whitebox}#1\end{whitebox}}
 
 %TODO Der Font muss jeweils systemspezifisch angepasst werden. Es funktioniert grundsätzlich, die ttf im selben Ordner abzulegen wie das Wurzeldokument.
-\newfontfamily{\rog}{Rogolan.ttf}
+% \newfontfamily{\rog}{Rogolan.ttf}
+\newfontfamily{\rog}{rogolan.otf}
 
 \newcommand{\fkv}{Finsterkamm-Volk }
 \newcommand{\fkvs}{Finsterkamm-Volks }
@@ -183,42 +185,10 @@ farbe=rot
 
 \spaltenende
 
-\newpage
-
-\kapitel{Asche im Wind}
 \input{asche_im_wind/abenteuer}
-
-\newpage
-
-%% asche im wind
-%TODO Charaktere ohne Formularfunktion exportieren und einbinden
-%\includepdf[pages=-,addtotoc={1,section,1,Eisen-Ala,nsc6}]{asche_im_wind/charaktere/eisen_ala.pdf}
-%\includepdf[pages=-,addtotoc={1,section,1,Falkja Narejko,nsc7}]{asche_im_wind/charaktere/falkja_narejko.pdf}
-
-\kapitel{Klamm und heimlich}
 \input{klamm_und_heimlich/abenteuer}
-
-\newpage
-
-% klamm und heimlich
-%TODO Charaktere ohne Formularfunktion exportieren und einbinden
-%\includepdf[pages=-,addtotoc={1,section,1,Arion Nebelsucherin,nsc1}]{klamm_und_heimlich/charaktere/arion_nebelsucherin.pdf}
-%\includepdf[pages=-,addtotoc={1,section,1,Donata Donnerschlag,nsc2}]{klamm_und_heimlich/charaktere/donata_donnerschlag.pdf}
-%\includepdf[pages=-,addtotoc={1,section,1,Elidir Fenius Galahan,nsc3}]{klamm_und_heimlich/charaktere/elidir_fenius_galahan.pdf}
-%\includepdf[pages=-,addtotoc={1,section,1,Karox Sohn des Kalgrix,nsc4}]{klamm_und_heimlich/charaktere/karox_sohn_des_kalgrix.pdf}
-%\includepdf[pages=-,addtotoc={1,section,1,Selindian der Würstchenspalter,nsc5}]{klamm_und_heimlich/charaktere/selindian_der_wuerstchenspalter.pdf}
-
-\kapitel{In\,den\,Hallen\,\allowbreak des\,Bergkönigs}
 \input{bergkoenig/in-den-hallen-des-bergkoenigs.tex}
-%TODO Charaktere ohne Formularfunktion exportieren und einbinden
-%\includepdf[pages=-,addtotoc={1,section,1,Dascha,sc1}]{bergkoenig/pdf/Dascha.pdf}
-
-% charaktere 
-\neueseite
-\ohnehintergrund
-
-
-\kapitel{Die\,schwarze\,Hand\,\allowbreak im\,wengenholmer\,Land}
 \input{schwarze_hand/abenteuer.tex}
+
 
 \end{document}
