--- a/band_02/asche_im_wind/abenteuer.tex
+++ b/band_02/asche_im_wind/abenteuer.tex
@@ -33,34 +33,34 @@ Zu Beginn können sie zwischen der Route über \textbf{Arsingen} und der über \
 
 \neuespalte
 
-\abschnitt{Einstiege Spielercharaktere}
+\subsection*{Einstiege Spielercharaktere}
 Die hier vorgestellten Einstiege bieten eine Möglichkeit, wie die verschiedenen Charaktere in das Abenteuer starten und welche Motivation sie haben können, um die Reise anzutreten.
 Sie sind aber nicht verpflichtend.
 Sollten die Spielleiterin oder die Spieler weitere Ideen haben, können sie diese gerne hinzufügen.
 
 
-\absatz{Charaktere, die einfaches Geld suchen und sich verteidigen können}
+\subsection*{Charaktere, die einfaches Geld suchen und sich verteidigen können}
 \textbf{Vanjescha Stoerrebrandt}, Leiterin des Kontors in \textbf{Tjolmar}, plant den Ausbau der Handelsstraße von Tjolmar nach \textbf{Riva}.
 Ihr Sekretär \textbf{Valpo Lucianus von Sturzbach} hat dafür vom Kontor in Lowangen eine Lieferung topographischer Geräte und eine Projektkasse mit 5.000 Dukaten für diverse Lohnarbeiten entgegengenommen und benötigt nun eine Eskorte.
 
-\absatz{Charaktere mit hohem Sozialstatus}
+\subsection*{Charaktere mit hohem Sozialstatus}
 Die Sprengung der Silberkrone, eines Berges im Rorwhed-Gebirge, durch ein Ritual eines orkischen Tairach-Schamanen sorgt für Unruhe unter den Führungskräften eurer Institution.
 Euer Vorgesetzter hat euch losgesandt, um einen versiegelten Brief an \textbf{Barngrimm Radobrecht}, den Großmeister des \textbf{Ordens der Grauen Stäbe} in Lowangen persönlich zu übergeben.
 
-\absatz{Naturverbundene Charaktere}
+\subsection*{Naturverbundene Charaktere}
 Euer Weg hat euch schon vor einer Weile nach \textbf{Lowangen} geführt.
 Zunächst angewidert von der lauten und engen Stadt habt ihr aber schon bald euren Platz als Beschützer und Heiler der wehrlosesten Bewohner gefunden: der Tiere.
 Zuletzt häufen sich aber verletzte Wildtiere unter euren Patienten, die im Norden der Stadt mit bereits älteren Verbrennungen gefunden werden.
 Einige der Städter erzählten euch von einem Vulkan, der die Natur in seiner Umgebung verwüstet.
 
 
-\absatz{Naturverbundene Magiebegabte}
+\subsection*{Naturverbundene Magiebegabte}
 Euer Zirkel hat von der Sprengung der Silberkrone und der Vernichtung des Tanzplatzes des örtlichen Hexenzirkels durch den orkische Tairach-Priester \textbf{Gushrogh Drughai} erfahren.
 Eurer Anführer hat euch daraufhin losgesandt, um Hilfe anzubieten.
 Zwar herrscht in der Region inzwischen Frieden zwischen Menschen und Orks und sogar eine vorsichtige Annäherung --
 allerdings sind besonders die lokalen Hexen noch skeptisch, ob dies auch für sie gilt.
 
-\absatz{Charaktere mit niedrigem Sozialstatus und Bedarf an Geld}
+\subsection*{Charaktere mit niedrigem Sozialstatus und Bedarf an Geld}
 Das Leben während der Belagerung der Drughash-Orks (1031 BF) war für alle hart.
 Während der Adel auf seine sogenannte Ehre geachtet hat, hattet ihr nicht die Möglichkeiten für solchen Luxus.
 Also habt ihr für freies Geleit wichtiger Waren in die Stadt, manchen Ork mit Informationen über die Verteidigung versorgt.
@@ -70,7 +70,7 @@ In den Kneipen hört ihr Gerüchte über eine hohe Belohnung von der Torf-Compag
 
 \spaltenende
 
-\absatz{Welcher Held weiß von welchen Ereignissen?}
+\subsection[Wer weiß von was?]{Welcher Held weiß von welchen Ereignissen?}
 
 \tabelle{lXXXXX}{
 & Ascheregen, verletzte Tiere & Stoerrebrandt-Lieferung & Brief an den Großmeister & Hexen im Rorwhed & Wildschwein\-fässer \\
@@ -107,7 +107,7 @@ Das Kontor ist kein Ort der Ruhe:
 	er Tageslohn dafür beträgt 4~Silber. Zunächst gilt es aber, die letzten Versicherungen abzuzeichnen, sollte es zu spontanen Tributforderungen oder Zollsperren durch orkische Truppen kommen.
 
 
-\absatz{Im Ordenshaus der Grauen Stäbe (Bunte Flucht)}
+\subsection[Im Ordenshaus der grauen Stäbe]{Im Ordenshaus der Grauen Stäbe (Bunte Flucht)}
 Im Ordenshaus herrscht unruhiges Geflüster: \textbf{Magistra major Vistella Jolen} ist vor einer Woche mit bleichem Gesicht und seltsamen Neuigkeiten von einer Reise nach \textbf{Tjolmar} zurückgekehrt. So habe südlich des \textbf{Rorwhed}s ein seltsamer Ascheregen in der Luft gehangen, der sich, nach einer \textsc{Oculus Astralis}-Analyse als magisch herausgestellt hat \emph{(Ilaris:80,141)}.
 Irritiert von ihrer Entdeckung legte sie eine \emph{Sinnenschärfeprobe} nach, um eine \emph{Strukturanalyse} \emph{(Ilaris:80)} durchzuführen. Das wirre Muster der Kraftfäden habe sie an den Rande der Erschöpfung getrieben, doch mit Mühe konnte sie eine Sache erkennen: Es handelt sich um die Spur eines feenartigen Wesens, dessen urtümliche Magie von inneren Bränden verzehrt wird.
 
@@ -370,7 +370,7 @@ Eine fangemachte Karte des Svelltlandes findet sich im Blog von telling auf \hre
 
 
 
-\absatz{Tiere}
+\subsection[Tiere und Pflanzen]{Tiere}
 \label{svellt}
 Die Tierwelt im Svelltland ist typisch für Nordaventurien und besonders von der Nähe zum \textbf{Orkland} geprägt,
 welches Tieren wie \textbf{Orklandhörnchen} und \textbf{-karnickel} den Namen gegeben hat.
@@ -383,7 +383,7 @@ Erst abseits der Straßen im Wald findet man \textbf{Wildschweine}, \textbf{Stre
 
 \neuespalte
 
-\absatz{Pflanzen}
+\subsection*{Pflanzen}
 Das Abenteuer spielt im Frühsommer, sodass sich viele örtlichen Pflanzenarten bereits zeigen und manche können auch schon geerntet werden. Entlang der Straßen und auf den Wiesen fallen darunter am häufigsten \textbf{Gulmond}, \textbf{Tarnele} und \textbf{Wirselkraut}, etwas seltener auch \textbf{Zwölfblatt}.
 
 Am Waldrand hat man häufig Glück mit der \textbf{Vierblättrigen Einbeere}.
@@ -476,7 +476,7 @@ Nahe Flussufern und in Sümpfen wachsen \textbf{Donf}, \textbf{Roter Drachenschl
     \end{itemize}
 
 \info{
-    \absatz{Generische Namen}
+    \subsection*{Generische Namen}
     \textbf{weiblich:}
     Dramina Gesse, Glenna Fassmacherin, Ilke Gerrholt, Traute Netzknüpferin \\
     \textbf{männlich:}
@@ -486,14 +486,14 @@ Nahe Flussufern und in Sümpfen wachsen \textbf{Donf}, \textbf{Roter Drachenschl
 \spaltenende
 
 \kasten{
-\absatz{Quelle 1: Augenzeugenbericht}
+\subsection[Handouts]{Quelle 1: Augenzeugenbericht}
 \label{aiw_quelle1}
 \enquote{Der Angriff hat nachts stattgefunden.
 	Es schien plötzlich noch dunkler zu werden und ein Rauchgeruch hing in der Luft, der nicht von unserem kleinen Feuer stammen konnte.
 	Beißender Qualm hat einen nach dem anderen zum Husten gebracht und die Sicht war schlecht. Die Gestalt, die dann aufgetaucht ist, schien geradewegs vom Himmel auf uns herabzufahren und aus Rauch und Qualm zu bestehen. Um sie herum begann das Gras zu schwelen und zu verkohlen. Wir leisteten kurz Widerstand, konnten aber gegen die allgegenwärtige Hitze nicht lange ankommen, zumal uns das Atmen schwer fiel. Inmitten des dichtesten Qualms habe ich aber eine etwa menschengroße Gestalt ausmachen können, die mich an ein Zündholz erinnert hat oder an eine halb erstickte Fackel, denn sie war dünn und verkohlt. Halb geblendet und nach Luft ringend sind alle in die Nacht geflohen, jeder in eine andere Richtung. Als ich an den Fluss kam, konnte ich mich dort im Dickicht am Ufer verbergen und mir den ganzen Ruß abwaschen. Noch am nächsten Morgen brannten mir die Augen.}
 }
 
-\absatz{Quelle 2: Die Weinlegende}
+\subsection*{Quelle 2: Die Weinlegende}
 \label{aiw_quelle2}
 Ihr betretet eine Holzhütte, die aussieht, als wäre sie vor kurzem aus frischen Buchenholz zusammengeschustert worden und die euch als Gasthaus beschrieben wurde. Innendrin entdeckt ihr einen schummrigen Saal mit vielen langen Tafeln und ihr seid erleichtert, dass der Duft des frischen Holzes noch nicht von diversen anderen Gerüchen jahrelangen Tavernenbetriebes überlagert wird.
 
@@ -524,8 +524,8 @@ Nachdem das Glas eilig aufgefüllt wurde, breitete sich Gemurmel in der Schankst
 \enquote{Irgendetwas muss es damit auf sich haben, warum sonst sollte die Torfkompagnie eine Belohnung auf die Fässer ausgerufen haben?}
 
 
-
-\absatz{Eigenheiten der Archetypen}
+\section{Beispielcharaktere}
+\subsection*{Eigenheiten der Archetypen}
 
 \spaltenanfang
 
@@ -571,10 +571,11 @@ Nachdem das Glas eilig aufgefüllt wurde, breitete sich Gemurmel in der Schankst
 
 \neueseite
 \ohnehintergrund
-\includepdf[pages=-,addtotoc={1,section,1,Eisen-Ala,nsc6}]{asche_im_wind/charaktere/eisen_ala.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Falkja Narejko,nsc7}]{asche_im_wind/charaktere/falkja_narejko.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Melcher,nsc8}]{asche_im_wind/charaktere/melcher.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Roana Wildfang,nsc9}]{asche_im_wind/charaktere/roana_wildfang.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Wiesel-Rupo,nsc10}]{asche_im_wind/charaktere/wiesel_rupo.pdf}
+% \includepdf[pages=-,addtotoc={1,subsection,1,Eisen-Ala,sc6}]{asche_im_wind/charaktere/eisen_ala.pdf}
+\includepdf[pages=-]{asche_im_wind/charaktere/eisen_ala.pdf}
+\includepdf[pages=-]{asche_im_wind/charaktere/falkja_narejko.pdf}
+\includepdf[pages=-]{asche_im_wind/charaktere/melcher.pdf}
+\includepdf[pages=-]{asche_im_wind/charaktere/roana_wildfang.pdf}
+\includepdf[pages=-]{asche_im_wind/charaktere/wiesel_rupo.pdf}
 \neueseite
 \mithintergrund
