--- a/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
+++ b/band_02/bergkoenig/in-den-hallen-des-bergkoenigs.tex
@@ -14,7 +14,6 @@
 %\credit{Korrektorat}{Matthias Ott\\Tilmann Kircher}
 \lizenz
 
-\hauptteil
 \spaltenanfang
 
 
@@ -1090,10 +1089,14 @@ Hier eine Übersichts-Tabelle, mit welchen Eigenheiten Sie den Figuren in welche
 
 % CHARKTERE
 \neueseite
-\includepdf[pages=-,addtotoc={1,section,1,Dascha,sc1}]{bergkoenig/pdf/dascha.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Jasinthe,sc1}]{bergkoenig/pdf/jasinthe.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Odir Sensendengler,sc1}]{bergkoenig/pdf/odir_sensendengler.pdf}
-\includepdf[pages=-,addtotoc={1,section,1,Graboxa,sc1}]{bergkoenig/pdf/graboxa.pdf}
+% \includepdf[pages=-,addtotoc={1,section,1,Dascha,sc1}]{bergkoenig/pdf/dascha.pdf}
+% \includepdf[pages=-,addtotoc={1,section,1,Jasinthe,sc1}]{bergkoenig/pdf/jasinthe.pdf}
+% \includepdf[pages=-,addtotoc={1,section,1,Odir Sensendengler,sc1}]{bergkoenig/pdf/odir_sensendengler.pdf}
+% \includepdf[pages=-,addtotoc={1,section,1,Graboxa,sc1}]{bergkoenig/pdf/graboxa.pdf}
+\includepdf[pages=-,addtotoc={1,section,1,Beispielcharaktere,hdbscs}]{bergkoenig/pdf/dascha.pdf}
+\includepdf[pages=-]{bergkoenig/pdf/jasinthe.pdf}
+\includepdf[pages=-]{bergkoenig/pdf/odir_sensendengler.pdf}
+\includepdf[pages=-]{bergkoenig/pdf/graboxa.pdf}
 
 \neueseite
 
