--- a/band_02/schwarze_hand/abenteuer.tex
+++ b/band_02/schwarze_hand/abenteuer.tex
@@ -1,5 +1,5 @@
 
-\kapitel{Die\,schwarze\,Hand\,\allowbreak im\,wengenholmer\,Land}
+\kapitel{Die\,schwarze\,Hand\,\allowbreak im\,wengenholmer\allowbreak\,Land}
 
 
 \begin{center} 
@@ -17,7 +17,7 @@ Ralf Luger, Jörg Rüdenauer
 
 
 \credit{Testspiele}{
-\textbf{Mit Dank an meine Testspielerinnen und Testspieler}
+\textbf{Mit Dank an meine Testspielerinnen und Testspieler}\\
 Gianni Bischoff, Felipe Cardoso Kircher, Laura Cardoso Kircher, 
 Silvia Cardoso Schöller, Stefan Ivenz, Peter Lichtenwagner,
 Ralf Luger, Julian Römer und Jörg Rüdenauer 
