--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -44,8 +44,8 @@
 }
 \newcommand{\vorlesen}[1]{\begin{whitebox}#1\end{whitebox}}
 
-%TODO Der Font muss jeweils systemspezifisch angepasst werden. Es funktioniert grundsätzlich, die ttf im selben Ordner abzulegen wie das Wurzeldokument.
-% \newfontfamily{\rog}{Rogolan.ttf}
+% NOTE Font liegt jetzt mit im Repository. Funktionert bei mir unter Windows und Linux.
+% newfontfamily{\rog}{Rogolan.ttf}
 \newfontfamily{\rog}{rogolan.otf}
 
 \newcommand{\fkv}{Finsterkamm-Volk }
@@ -99,7 +99,16 @@
 	\end{centering}
 }
 \neueseite
-\subsection*{Version 0.3 vom \today\linebreak Versionsgeschichte}
+\subsection*{Version 0.4 vom \today\linebreak Versionsgeschichte}
+\subsubsection*{0.4}
+Charrakterbögen eingebunden
+
+IHVZ angepasst  % TODO: nummerierung resettet in HdB
+
+Groblayout viertes Abenteuer % TODO: vereinhtl. layout
+
+Kreaturenkästen für Klamm und heimlich
+
 \subsubsection*{0.3}
 Vereinheitlichung Zitation und andere Markups in den drei Abenteuern
 
